--- a/ERPWeb/Views/AgroConfiguration/_GetDivisionPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetDivisionPartialView.cshtml
@@ -12,6 +12,7 @@
                 <tr class="text-center">
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
+                    <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle">Zone Name</th>
                     <th style="vertical-align:middle">Division Name</th>
                     <th style="vertical-align:middle">Status</th>
@@ -26,6 +27,7 @@
 
                     <td class="text-center text-bold">@SL</td>
                     <td class="hide">@item.DivisionId</td>
+                    <td class="hide">@item.ZoneId</td>
                     <td class="text-center">@item.ZoneName</td>
                     <td class="text-center">@item.DivisionName</td>
                     <td class="text-center">@item.Status</td>
